# Hive

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Impelmentation.md  LICENSE  README.md  Study.md  Understanding.md  plan.md  test.py
.github/workflows/: ci.yml
benches/: hive_bench.rs
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs
cli/: Cargo.toml  main.rs
core/: Cargo.toml  errors.rs  lib.rs  transaction.rs  types.rs  value.rs  wal.rs
core/benches/: hive_bench.rs
core/db/: hive_db.rs  index.rs  mod.rs  store_path.rs
core/query/: executor.rs  mod.rs  parser.rs  planner.rs  result.rs  utils.rs
core/storage/: buffer_pool.rs  label_store.rs  mod.rs  overflow_store.rs  page_cache.rs  pager.rs
core/storage/page/: format.rs  layout.rs  mod.rs  record.rs  serializer.rs
core/store/: free_list.rs  header.rs  label_store.rs  mod.rs  string_store.rs
core/store/edge/: record.rs  store.rs
core/store/node/: record.rs  store.rs
core/store/property/: record.rs  store.rs
core/wal/: log.rs  mod.rs  recovery.rs  utils.rs  wal.rs  wal_entry.rs
core/wal/codec/: deserializer.rs  mod.rs  serializer.rs
docs/: architecture.md  cypher.md  storage.md
examples/: README.md  knowledge_graph.rs  social_graph.rs
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
perf/: README.md
scripts/: README.md
src/: errors.rs  lib.rs  transaction.rs  types.rs  value.rs  wal.rs
src/db/: hive_db.rs  index.rs  mod.rs  store_path.rs
src/query/: ast.rs  cypher.pest  executor.rs  mod.rs  parser.rs  planner.rs  types.rs
src/store/: edge_record.rs  edge_store.rs  free_list.rs  header.rs  label_store.rs  mod.rs  node_record.rs  node_store.rs  property_record.rs  property_store.rs  record.rs  string_store.rs
src/store/edge/: record.rs  store.rs
src/store/node/: record.rs  store.rs
src/store/property/: record.rs  store.rs
src/tests/: mod.rs
src/tests/db/: header_test.rs  hive_db_test.rs  index_test.rs  mod.rs  wal_test.rs
src/tests/edge_store/: mod.rs  store_open_test.rs  store_read_append_test.rs  store_update_test.rs
src/tests/free_list/: mod.rs  store_push_pop_test.rs
src/tests/query/: mod.rs  (+4 more)
testing/: README.md
testing/core/: Cargo.toml  lib.rs
testing/rust/: lib.rs
tools/: README.md
(+71 files in other folders)
