[workspace]
resolver = "2"
members = ["bindings/rust", "cli", "core", "parser", "testing/rust"]
default-members = ["bindings/rust", "cli", "core", "parser", "testing/rust"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yogeshsharma/hive"
authors = ["Hive authors"]

[workspace.dependencies]
hive = { path = "bindings/rust", version = "0.1.0" }
hive_core = { path = "core", version = "0.1.0" }
hive_parser = { path = "parser", version = "0.1.0" }
crc32fast = "1"
criterion = "0.5"
rustyline = "14"
