[package]
name = "hive_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Hive graph database engine"

[lib]
name = "hive_core"
path = "lib.rs"

[dependencies]
hive_parser.workspace = true
crc32fast.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "hive_bench"
harness = false
